test/expected/explain_c8-c++17.out
explain char8_t x
        ^
9: error: "char8_t": unsupported type until C++20; did you mean "char16_t", "char32_t", or "wchar_t"?
